fix: height set to max-content for header on small screens.

--- a/components/Navigation/Navigation.css
+++ b/components/Navigation/Navigation.css
@@ -10,11 +10,10 @@
   width: 100%;
   height: 8rem;
   min-height: 8rem;
-  max-height: fit-content;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: var(--navigation-padding);
+  gap: var(--navigation-padding);
   padding: var(--navigation-padding);
 }
 
@@ -36,7 +35,9 @@
 
 @media screen and (min-width: 375px) and (max-width: 870px) {
   .header {
-    height: 6rem;
+    min-height: 6rem;    
+    flex-wrap: wrap; 
+    height: fit-content;
   }
 }
 
